CHANGELOG fuer c't-Bot
======================
2008-04-04 Timo Sandmann [mail@timosandmann.de]: bot_put_stack_waypositions() / bot_drive_stack() in bot_follow_object() integriert

2008-04-04 Timo Sandmann [mail@timosandmann.de]: LED-Update: Bugfix und Vereinheitlichung von TEST_AVAILABLE und normal, Sensor-Code etwas aufgeraeumt

2008-04-01 Timo Sandmann [mail@timosandmann.de]: LED-Update in Funktion ausgelagert, damit auch bei simulierten Bots die LEDs benutzt werden

2008-03-31 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer bot_gotoxy (funktioniert jetzt auch mit negativen Koordinaten)

2008-03-31 Timo Sandmann [mail@timosandmann.de]: Makefile aktualisiert, Doxygen-Warnungen beseitigt und Warnings, falls wichtige Verhaltensabhaengigkeiten nicht erfuellt sind

2008-03-31 Frank Menzel [Menzelfr@gmx.net]: Verhalten um sich entlang des Fahrweges relevante Koordinaten auf dem Stack zu merken

2008-03-31 Timo Sandmann [mail@timosandmann.de]: Bugfixes fuer Remote-Calls, goto_pos() und Bot-2-Bot

2008-03-30 Harald W. Leschner [hari@h9l.net]: SP03-Treiber Update 

2008-03-28 Timo Sandmann [mail@timosandmann.de]: Redundanten Init-Code aus bot-2-pc.c und bot-2-sim.c in command_init() zusammengefasst,
												 Bugfix fuer Welcome-Paket-Auswertung,
												 DONE-Paket fuer reale Bots,
												 Bot-2-Bot-Kommunikation eingefuehrt (bot-2-bot.c / BOT_2_BOT_AVAILABLE),
												 Liste fuer aktive Bots gebaut (experimentell) 

2008-03-18 Timo Sandmann [mail@timosandmann.de]: Code fuer automatische Adressvergabe vervollstaendigt, PC-Code fuer Bot-2-Sim aufgeraeumt

2008-03-16 Benjamin Benz [bbe@heise.de]: Rohcode für die automatische Adressvergabe eingefügt

2008-03-16 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer command.c

2008-03-15 Timo Sandmann [mail@timosandmann.de]: Ergaenzung zur Bot-Kommunikation: Bot-Code wertet Komm'-Adresse aus, Adresse per Kommandozeile einstellbar (-a), unnoetigen Komm'-Code auskommentiert
