@@ -41,11 +41,126 @@
 #include "map.h"
 #include "pos_stack.h"
 #include <stdlib.h>
+#include <string.h>
+#include "rc5-codes.h"
+
+#ifdef MCU
+#include <avr/eeprom.h>
+#else
+#include "eeprom-emu.h"
+#endif	// MCU
+
+/*! Keymap fuer Keypad-Eingaben */
+EEPROM uint8_t gui_keypad_table[][5] = {
+	{'.', ',', ':', ';', '0'},	// 0
+	{' ', '1',   0,   0,   0},	// 1
+	{'a', 'b', 'c', '2',   0},	// 2
+	{'d', 'e', 'f', '3',   0},	// 3
+	{'g', 'h', 'i', '4',   0},	// 4
+	{'j', 'k', 'l', '5',   0},	// 5
+	{'m', 'n', 'o', '6',   0},	// 6
+	{'p', 'q', 'r', 's', '7'},	// 7
+	{'t', 'u', 'v', '8',   0},	// 8
+	{'w', 'x', 'y', 'z', '9'}	// 9
+};
 
 #ifdef DISPLAY_AVAILABLE
 
 int8 max_screens = 0;	/*!< Anzahl der zurzeit registrierten Screens */
 void (* screen_functions[DISPLAY_SCREENS])(void) = {NULL};	/*!< hier liegen die Zeiger auf die Display-Funktionen */
+
+#ifdef KEYPAD_AVAILABLE
+static uint32_t keypad_last_pressed = 0;	/*!< Zeitpunkt der letzten Tasteneingabe */
+static uint8_t keypad_row = 0;				/*!< Zeile fuer Ausgabe der Eingabe */
+static uint8_t keypad_col = 0;				/*!< Spalte fuer Ausgabe der Eingabe */
+static char keypad_buffer[21];				/*!< Eingabepuffer */
+static char * keypad_result = NULL;			/*!< aktuelle Position im Puffer */
+static void (* keypad_callback)(char * result) = NULL;	/*!< Callback-Funktion nach Abschluss */
+
+
+/*!
+ * Startet eine neue Keypad-Eingabe. Abgeschlossen wird sie mit der
+ * Taste "Play", abgebrochen mit "Stop".
+ * Nach  Abschluss wird die uebergebene Callback-Funktion aufgerufen
+ * mit dem Eingabe-String als Parameter.
+ * @param *callback	Zeiger auf eine Funktion, die die Eingabe bekommt
+ * @param row		Zeile der Cursorposition fuer die Anzeige der Eingabe
+ * @param col		Spalte der Cursorposition fuer die Anzeige der Eingabe 
+ */
+void gui_keypad_request(void (* callback)(char * result), uint8_t row, uint8_t col) {
+	keypad_callback = callback;
+	keypad_row = row;
+	keypad_col = col;
+	keypad_result = keypad_buffer-1;
+}
+
+/*!
+ * Ermoeglicht Eingabe von Text und Zahlen ueber eine Ziffern-Fernbedienung.
+ * Diese Funktion prueft, ob derzeit eine Eingabe laeuft und wertet den
+ * RC5-Code entsprechend aus.
+ * Mit der Taste "Play" wird eine Eingabe abgeschlossen, mit "Stop" verworfen.
+ * @param rc5	RC5-Code, der ausgewertet werden soll
+ * @return		RC5-Code unveraendert, falls Keypad nicht aktiv, sonst 0 
+ */
+static uint16_t gui_keypad_check(uint16_t rc5) {
+	static uint8_t pressed = 0;
+	static uint16_t last_rc5 = 0;
+	
+	if (keypad_callback == NULL) {
+		/* keine Keypad-Eingabe aktiv */
+		return rc5;
+	}
+	switch (rc5) {
+	case RC5_CODE_STOP:
+		/* Abbruch */
+		*keypad_buffer = 0;
+		// no break
+	case RC5_CODE_PLAY:
+		/* fertig */
+		keypad_callback(keypad_buffer);
+		keypad_callback = NULL;
+		memset(keypad_buffer, 0, 21);
+		// no break;
+	case 0:
+		/* keine neue Eingabe */
+		return 0;
+	}
+	
+	if (!timer_ms_passed(&keypad_last_pressed, 1000) && rc5 == last_rc5) {
+		/* dieselbe Taste wurde mehrfach gedrueckt */
+		pressed++;
+	} else {
+		/* eins weiter schalten */
+		keypad_result++;
+		pressed = 0;
+	}
+	
+//	LOG_DEBUG("pressed=%u", pressed);
+	
+	uint8_t key = rc5 - RC5_CODE_0;
+	if (key > 9) {
+		/* ungueltige Eingabe */
+		return 0;
+	}
+	if (pressed > 4) {
+		/* Umlauf */
+		pressed = 0;
+	}
+
+//	LOG_DEBUG("key=%u", key);
+	char data;
+	while ((data = eeprom_read_byte(&gui_keypad_table[key][pressed])) == 0) {
+		/* bei einigen Tasten ist nicht alles belegt */
+		pressed = 0;
+	}
+
+	last_rc5 = rc5;
+	keypad_last_pressed = TIMER_GET_TICKCOUNT_32;
+	*keypad_result = data;
+//	LOG_DEBUG("data=%c", data);
+	return 0;
+}
+#endif	// KEYPAD_AVAILABLE
 
 /*! 
  * @brief 		Display-Screen Registrierung
@@ -55,7 +170,7 @@ void (* screen_functions[DISPLAY_SCREENS])(void) = {NULL};	/*!< hier liegen die 
  * Legt einen neuen Display-Screen an und haengt eine Anzeigefunktion ein.
  * Diese Funktion kann auch RC5-Kommandos behandeln. Wurde eine Taste ausgewertet, setzt man RC5_Code auf 0.
  */
-int8 register_screen(void* fkt){
+int8 register_screen(void* fkt) {
 	if (max_screens == DISPLAY_SCREENS) return -1;	// sorry, aber fuer dich ist kein Platz mehr da :(
 	int8 screen_nr = max_screens++;		// neuen Screen hinten anfuegen
 	screen_functions[screen_nr] = fkt;	// Pointer im Array speichern
@@ -69,8 +184,11 @@ int8 register_screen(void* fkt){
  * @param screen 	Nummer des Screens, der angezeigt werden soll
  * Zeigt einen Screen an und fuehrt die RC5-Kommandoauswertung aus, falls noch nicht geschehen.
  */
-void gui_display(int8 screen){
-//	rc5_control();	// Vielleicht waere der Aufruf hier uebersichtlicher?
+void gui_display(int8 screen) {
+	#ifdef KEYPAD_AVAILABLE
+		/* Keypad-Eingabe checken */
+		RC5_Code = gui_keypad_check(RC5_Code);
+	#endif
 	/* Gueltigkeit der Screen-Nr. pruefen und Anzeigefunktion aufrufen, falls Screen belegt ist */
 	#ifdef LED_AVAILABLE
 	#ifndef TEST_AVAILABLE
@@ -78,6 +196,21 @@ void gui_display(int8 screen){
 	#endif	// TEST_AVAILABLE
 	#endif	// LED_AVAILABLE 
 	if (screen < max_screens && screen_functions[screen] != NULL) screen_functions[screen]();
+	
+	#ifdef KEYPAD_AVAILABLE
+		/* Keypad-Eingabe */
+		if (keypad_callback != NULL) {
+			display_cursor(keypad_row, keypad_col);
+			display_printf("%s", keypad_buffer);
+			
+			uint8_t col = keypad_col + strlen(keypad_buffer);
+			if ((uint32_t)(TIMER_GET_TICKCOUNT_32 - keypad_last_pressed) > MS_TO_TICKS(1000UL)) {
+				col++;
+			}
+			display_cursor(keypad_row, col);
+		}
+	#endif	// KEYPAD_AVAILABLE
+	
 	if (RC5_Code != 0) default_key_handler();	// falls rc5-Code noch nicht abgearbeitet, Standardbehandlung ausfuehren
 	RC5_Code = 0;	// fertig, RC5-Puffer loeschen
 	#ifdef LED_AVAILABLE
@@ -93,7 +226,7 @@ void gui_display(int8 screen){
  * @date 	12.02.2007	
  * Traegt die Anzeige-Funktionen in das Array ein.
  */
-void gui_init(void){
+void gui_init(void) {
 //	register_screen(NULL);
 	#ifdef DISPLAY_MINIFAT_INFO
 		/* MiniFAT wird vor GUI initialisiert und schreibt deshalb einfach auf's leere Display, der Dummy hier verhindert nur das Ueberschreiben in den anschliessenden Bot-Zyklen, damit man die Daten noch lesen kann */
