@@ -1,5 +1,11 @@
 CHANGELOG fuer c't-Bot
 ======================
+2008-04-08 Timo Sandmann [mail@timosandmann.de]: Eingabe von Text und Zahlen per Fernbedienung hinzugefuegt. 
+												 Wird ueber KEYPAD_AVAILABLE eingeschaltet und funktioniert wie von Handy oder Telefon gewohnt.
+												 Abschliessen der Eingabe mit Taste "play", Abbruch mit "stop".
+												 EEPROM-Abbild muss neu uebertragen werden!
+												 Bot-Adresse (jetzt auf Display Misc) per FB veraenderbar (Taste "Mute"; Eingabe als Dezimalzahl).
+
 2008-04-04 Timo Sandmann [mail@timosandmann.de]: bot_put_stack_waypositions() / bot_drive_stack() in bot_follow_object() integriert
 
 2008-04-04 Timo Sandmann [mail@timosandmann.de]: LED-Update: Bugfix und Vereinheitlichung von TEST_AVAILABLE und normal, Sensor-Code etwas aufgeraeumt
